--- a/Dice-Snippets/snippets/StarWarsDice/StarWarsDice.css
+++ b/Dice-Snippets/snippets/StarWarsDice/StarWarsDice.css
@@ -1,3 +1,4 @@
+/** removed because they work better not being inverted: , LightSide, DarkSide, LightDark; **/
 /** formatting stuff for Genesys **/
 body a.tag.tag[href^="#StarWarsAbility"],
 .is-live-preview .cm-line:not(.cm-active) .cm-tag-StarWarsAbility:not(.cm-formatting) {
@@ -390,21 +391,6 @@ settings:
 
 .theme-dark:not(.do-not-invert-symbols-StarWars) a.tag.tag[href^="#StarWarsTriumph"],
 .theme-dark:not(.do-not-invert-symbols-StarWars) .is-live-preview .cm-line:not(.cm-active) .cm-tag-StarWarsTriumph:not(.cm-formatting) {
-  filter: invert(1);
-}
-
-.theme-dark:not(.do-not-invert-symbols-StarWars) a.tag.tag[href^="#StarWarsLightSide"],
-.theme-dark:not(.do-not-invert-symbols-StarWars) .is-live-preview .cm-line:not(.cm-active) .cm-tag-StarWarsLightSide:not(.cm-formatting) {
-  filter: invert(1);
-}
-
-.theme-dark:not(.do-not-invert-symbols-StarWars) a.tag.tag[href^="#StarWarsDarkSide"],
-.theme-dark:not(.do-not-invert-symbols-StarWars) .is-live-preview .cm-line:not(.cm-active) .cm-tag-StarWarsDarkSide:not(.cm-formatting) {
-  filter: invert(1);
-}
-
-.theme-dark:not(.do-not-invert-symbols-StarWars) a.tag.tag[href^="#StarWarsLightDark"],
-.theme-dark:not(.do-not-invert-symbols-StarWars) .is-live-preview .cm-line:not(.cm-active) .cm-tag-StarWarsLightDark:not(.cm-formatting) {
   filter: invert(1);
 }
 
