--- a/Dice-Snippets/src/variables.scss
+++ b/Dice-Snippets/src/variables.scss
@@ -1,4 +1,4 @@
-$diceandsymbols: Ability, Boost, Challenge, Difficulty, Proficiency, Setback, Advantage, Despair, Failure, Success, Threat, Triumph, Force, LightSide, DarkSide, LightDark, DI2, DI3, DI4, DI5;
+$diceandsymbols: Ability, Boost, Challenge, Difficulty, Proficiency, Setback, Advantage, Despair, Failure, Success, Threat, Triumph, Force, LightSide, DarkSide, LightDark, DI2, DI3, DI4, DI5, AB2, AB3, AB4, AB5;
 $dice: Ability, Boost, Challenge, Difficulty, Proficiency, Setback, Force;
 $symbols: Advantage, Despair, Failure, Success, Threat, Triumph; /** removed because they work better not being inverted: , LightSide, DarkSide, LightDark; **/
 $lp: ".is-live-preview .cm-line:not(.cm-active)";
