--- a/Dice-Snippets/src/scss/_formatting.scss
+++ b/Dice-Snippets/src/scss/_formatting.scss
@@ -10,7 +10,7 @@
             top: .175em;
             position: relative;
             height: 1em;
-            width: auto; /* was 1em, but I think auto will work */
+            width: 1em; /* was 1em, but I think auto will work */
             border: 0;
             /* Added to try and deal with themes */
             background-color: transparent;
@@ -33,4 +33,36 @@
             }
         }
     }
+}
+ 
+// _dice.scss
+@mixin dice-tag-base {
+  display: inline-flex;
+  align-self: center;
+  position: relative;
+  top: 0.175em;
+
+  height: 1em;
+  width: auto;
+
+  border: 0;
+  padding: 0;
+  border-radius: 0;
+  background-color: transparent;
+
+  font-size: var(--editor-font-size);
+  vertical-align: baseline;
+}
+
+// _dice.scss
+@mixin dice-tag($name, $svg) {
+  body a.tag.tag[href^="##{$name}"],
+  .is-live-preview .cm-line:not(.cm-active) .cm-tag-#{$name}:not(.cm-formatting) {
+    @include dice-tag-base;
+    content: url(#{$svg});
+  }
+
+  .is-live-preview .cm-line:not(.cm-active) .cm-formatting.cm-tag#{$name} {
+    display: none;
+  }
 }
