--- a/Dice-Snippets/src/scss/starwars-alt.scss
+++ b/Dice-Snippets/src/scss/starwars-alt.scss
@@ -23,10 +23,12 @@ settings:
 		default: false
 */
 $game: ""; 
+$symbols: assets.$starwars-symbols;
+
 /* --------------------------------------------------------------------------
    Dice & symbol tag rendering
    -------------------------------------------------------------------------- */
-@each $name, $svg in assets.$dice-symbols {
+@each $name, $svg in $symbols {
   @include dice.dice-tag($game+$name, $svg);
 }
 
