Refactored dice & result symbols, cleaned up code.

--- a/Dice-Snippets/src/scss/_system.scss
+++ b/Dice-Snippets/src/scss/_system.scss
@@ -13,10 +13,40 @@
   /* Dark theme inversion for light-colored symbols */
   @include dice.dice-dark-invert(
     $prefix + Advantage,
+    $prefix + AD1,
+    $prefix + AD2,
+    $prefix + AD3,
+    $prefix + AD4,
+    $prefix + AD5,
     $prefix + Despair,
+    $prefix + DE1,
+    $prefix + DE2,
+    $prefix + DE3,
+    $prefix + DE4,
+    $prefix + DE5,
     $prefix + Failure,
+    $prefix + FA1,
+    $prefix + FA2,
+    $prefix + FA3,
+    $prefix + FA4,
+    $prefix + FA5,
     $prefix + Success,
+    $prefix + SU1,
+    $prefix + SU2,
+    $prefix + SU3,
+    $prefix + SU4,
+    $prefix + SU5,
     $prefix + Threat,
-    $prefix + Triumph
+    $prefix + TH1,
+    $prefix + TH2,
+    $prefix + TH3,
+    $prefix + TH4,
+    $prefix + TH5,
+    $prefix + Triumph,
+    $prefix + TR1,
+    $prefix + TR2,
+    $prefix + TR3,
+    $prefix + TR4,
+    $prefix + TR5,
   );
 }
