Refactored multi-symbol tags to use format #[2-5]Symbol when referring to more than one symbol. So #DI3 becomes #3Difficulty.

--- a/Dice-Snippets/src/scss/_system.scss
+++ b/Dice-Snippets/src/scss/_system.scss
@@ -13,40 +13,34 @@
   /* Dark theme inversion for light-colored symbols */
   @include dice.dice-dark-invert(
     $prefix + Advantage,
-    $prefix + AD1,
-    $prefix + AD2,
-    $prefix + AD3,
-    $prefix + AD4,
-    $prefix + AD5,
+    2 + $prefix + Advantage,
+    3 + $prefix + Advantage,
+    4 + $prefix + Advantage,
+    5 + $prefix + Advantage,
     $prefix + Despair,
-    $prefix + DE1,
-    $prefix + DE2,
-    $prefix + DE3,
-    $prefix + DE4,
-    $prefix + DE5,
+    $prefix + 2Despair,
+    $prefix + 3Despair,
+    $prefix + 4Despair,
+    $prefix + 5Despair,
     $prefix + Failure,
-    $prefix + FA1,
-    $prefix + FA2,
-    $prefix + FA3,
-    $prefix + FA4,
-    $prefix + FA5,
+    $prefix + 2Failure,
+    $prefix + 3Failure,
+    $prefix + 4Failure,
+    $prefix + 5Failure,
     $prefix + Success,
-    $prefix + SU1,
-    $prefix + SU2,
-    $prefix + SU3,
-    $prefix + SU4,
-    $prefix + SU5,
+    $prefix + 2Success,
+    $prefix + 3Success,
+    $prefix + 4Success,
+    $prefix + 5Success,
     $prefix + Threat,
-    $prefix + TH1,
-    $prefix + TH2,
-    $prefix + TH3,
-    $prefix + TH4,
-    $prefix + TH5,
+    $prefix + 2Threat,
+    $prefix + 3Threat,
+    $prefix + 4Threat,
+    $prefix + 5Threat,
     $prefix + Triumph,
-    $prefix + TR1,
-    $prefix + TR2,
-    $prefix + TR3,
-    $prefix + TR4,
-    $prefix + TR5,
+    $prefix + 2Triumph,
+    $prefix + 3Triumph,
+    $prefix + 4Triumph,
+    $prefix + 5Triumph,
   );
 }
